Fixed mint btn on small screen

--- a/src/components/claim-attribute-set/attribute-section/style.scss
+++ b/src/components/claim-attribute-set/attribute-section/style.scss
@@ -83,14 +83,29 @@
 .mas-mint {
   width: 90%;
   @media screen and (max-width: $breakpoint-lg) {
-    max-width: 14rem;
+    width: 14rem;
+    margin-left: auto !important;
+    margin-right: auto !important;
   }
   @media screen and (max-width: $breakpoint-sm) {
-    font-size: $size-18;
-    line-height: $size-20;
-    margin: 0;
+    font-size: $size-16 !important;
+    line-height: $size-16 !important;
   }
   @media screen and (max-width: $breakpoint-xs) {
+    width: 100%;
+  }
+}
+
+.mint-btn-container {
+  margin-top: $size-32;
+  @media screen and (max-width: $breakpoint-lg) {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  @media screen and (max-width: $breakpoint-md) {
+    margin-top: $size-16;
+  }
+  @media screen and (max-width: $breakpoint-md) {
     width: 100%;
   }
 }
@@ -98,7 +113,7 @@
 .mint-btn {
   display: flex;
   justify-content: center;
-  margin-top: $size-32;
+
   // margin-left: 1.5rem;
   font-family: $font-family-gochi-hand;
   font-size: $size-24;
@@ -106,14 +121,11 @@
   width: 100%;
 
   @media screen and (max-width: $breakpoint-lg) {
-    margin-left: auto !important;
-    margin-right: auto !important;
     width: 14rem;
   }
 
   @media screen and (max-width: $breakpoint-md) {
-    margin-top: $size-16;
-    width: 14rem;
+    max-width: 14rem;
   }
   @media screen and (max-width: $breakpoint-sm) {
     font-size: $size-18;
